@@ -82,6 +82,13 @@ _Description: Kernel to install:
  The list shows the available kernels. Please choose one of them in order
  to make the system bootable from the hard drive.
 
+Template: base-installer/kernel/altmeta
+Type: text
+Description: for internal use; can be preseeded
+ Optional postfix for kernel meta packages; can be used for example to
+ support installation of an updated kernel for stable.
+ Don't include the leading hyphen: it will be prepended in the code.
+
 Template: base-installer/kernel/skip-install
 Type: boolean
 Default: false
