@@ -19,8 +19,11 @@ base-installer (1.87) UNRELEASED; urgency=low
     This allows both standard postfixes (e.g. -smp) postfixes for custom built
     images, and is used to support updated kernel meta packages for stable.
   * mips/mipsel: allow fallback to 4kc-malta kernel for 5kc-malta.
+  * Add hack that allows default selection of kernel meta packages with a
+    postfix added to the name through preseeding, for example to support
+    selection of updated kernels for stable.
 
- -- Frans Pop <fjp@debian.org>  Tue, 05 Feb 2008 15:23:24 +0100
+ -- Frans Pop <fjp@debian.org>  Tue, 05 Feb 2008 15:25:44 +0100
 
 base-installer (1.86) unstable; urgency=low
 
